[package]
name = "hyperspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
chrono = "0.4.31"
tokio = { version = "1.35.0", features = ["full"] }
dirs = "5.0.1"
